--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,25 @@
 .container {
   padding: 0 2rem;
 }
+.nav ul{
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+}
+.nav ul li{
+  margin-right: 25px;
+  list-style: none;
+  font-weight: bold;
+  cursor: pointer;
+  
+}
+/* a:hover {
+  background-color: yellow;
+} */
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 1rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -49,9 +64,12 @@
 .description {
   text-align: center;
 }
+.imagemain{
+  border-radius: 5px;
+}
 
 .description {
-  margin: 4rem 0;
+  margin: 1rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
 }
@@ -114,3 +132,4 @@
     flex-direction: column;
   }
 }
+
